# XLA-Sharded-_demo

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: __init__.py  profiler.py  report.py  throughput.py
configs/: model_config.py
engine/: __init__.py  generate_naive.py  generate_xla.py  sharder.py  spec_dec.py
figures/: spec_dec_thorough_results.csv
models/: draft_model.py  kv_cache.py  layers.py  transformer.py
notebooks/: benchmark_bs_seq.ipynb
plan/: SKILL.md  XLA_SHARDED_PLAN_FINAL.md  xla_sharded_architecture.html
tests/: test_generation.py  test_kv_cache.py  test_model.py  test_sharding.py  test_spec_dec.py
tokenizer/: tokenizer.py
